add jvm arguments